--- a/template/admin/logged.html
+++ b/template/admin/logged.html
@@ -1,3 +1,6 @@
+<script>
+var userLevel = {{USER_LEVEL}};    
+</script>
 <div style="float:right;">
 <div class="btn-group">
   <a class="btn btn-primary" href="#"><i class="icon-user icon-white"></i> {{USER_NAME}}</a>
