--- a/template/theme/header.html
+++ b/template/theme/header.html
@@ -4,20 +4,21 @@
         <title>{{TITLE}}</title>
         <meta name="description" content="{{PAGE_DESCRIPTION}}" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="generator" content="InvaNode 0.1.0" />
         <link type="text/css" rel="stylesheet" media="all" href="/template/theme/style.css" />
         <link type="text/css" rel="stylesheet" media="all" href="/template/assets/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="/template/assets/css/wysiwyg-color.css" />
         <script src="/template/assets/js/jquery.js"></script>
         <script src="/template/assets/js/in.js"></script>
         <script src="/template/assets/js/bootstrap.min.js"></script>
-        {{PLUGIN:GOOGLE_ANALYTICS}}
       	<script>
-            var curPageUrl = "{{JS_CUR_PAGE_URL}}";
-            var siteUrl = "{{JS_SITE_URL}}";
-            var siteName = "{{JS_SITE_NAME}}"
+            var curPageUrl = '{{JS_CUR_PAGE_URL}}';
+            var siteUrl = '{{JS_SITE_URL}}';
+            var siteName = '{{JS_SITE_NAME}}'
+            var routingGraph = '{{ROUTING_GRAPH}}';
+            var numPostPerPage = {{NUM_POSTS_PER_PAGE}};
             $("document").ready(function(){});
         </script>
-        {{PLUGIN:AJAX_INDEX}}
     </head>
     <body>
 <div class="navbar navbar-inverse">
@@ -33,4 +34,4 @@
         </div>
     </div>
 </div>
-    
+<div id="content-container" class="container">    
