--- a/template/theme/index.html
+++ b/template/theme/index.html
@@ -1,40 +1,9 @@
-<div id="content-container" class="container">
-  <div style="width: 940px; margin: 0 auto;">  
-
-<!--<div id="myCarousel" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="active item">
-        <img src="/images/summer1.jpg" alt="" />
-        <div class="carousel-caption">
-                      <h4>First Thumbnail label</h4>
-                      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    </div>
-    </div>
-    <div class="item">
-        <img src="/images/summer2.jpg" alt="" />
-        <div class="carousel-caption">
-                      <h4>Second Thumbnail label</h4>
-                      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    </div>
-    </div>
-    <div class="item">
-        <img src="/images/summer1.png" alt="" />
-        <div class="carousel-caption">
-                      <h4>Third Thumbnail label</h4>
-                      <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    </div>
-    </div>
-  </div>
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-  </div>
-<script>
-   $("document").ready(function(){
-       $('.carousel').carousel();
-   }); 
-</script>
--->    
-
-{{PAGE_CONTENT}}
-</div>    
+<div style="width: 700px; float:left;">  
+    {{PAGE_CONTENT}}
+    <div class="pagination">
+      {{PAGINATION}}
+    </div>  
+</div>
+<div style="width:220px; float:right;">
+    Space for plugins
 </div>
