--- a/template/theme/style.css
+++ b/template/theme/style.css
@@ -132,6 +132,10 @@
     padding: 20px 0 40px 0; 
     border-bottom: 1px solid #ccc;
 }
+.small-post:last-of-type
+{
+   border-bottom: none;
+}
 
 .small-post-name
 
@@ -201,16 +205,26 @@
 .pagination
 {
   margin-top: 20px;
+  border-top: 1px solid #2F7F5A;
+  padding: 15px 0px 0 0px;
+  float:left;
+  clear: both;
 }
 
-.pagination a 
+.pagination a, span.a
 {
   font-size: 15px;
   margin-right: 10px;
   padding: 3px 5px 3px 5px;
   color: #2F7F5A;
 }
-.pagination a.current-page-number
+
+.pagination a:first-child, span.a:first-child
+{
+  margin-left:5px;
+}
+
+.pagination a.current-page-number, span.current-page-number
 {
   background-color: #2F7F5A;
   color: #fff;
