--- a/template/theme/base/header.html
+++ b/template/theme/base/header.html
@@ -5,7 +5,7 @@
         <meta name="description" content="{{PAGE_DESCRIPTION}}" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="generator" content="InvaNode 0.1.0" />
-        <link type="text/css" rel="stylesheet" media="all" href="/template/theme/style.css" />
+        <link type="text/css" rel="stylesheet" media="all" href="/template/theme/base/style.css" />
         <link type="text/css" rel="stylesheet" media="all" href="/template/assets/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="/template/assets/css/wysiwyg-color.css" />
         <script src="/template/assets/js/jquery.js"></script>
