--- a/www/template/theme/base/footer.html
+++ b/www/template/theme/base/footer.html
@@ -1,29 +1,24 @@
+<div class="footer-main">
+    <div class="container">
+        <div class="row">
+             <div class="col-md-12">
+
+
+             </div>
+        </div>
+    </div>
 </div>
 
-<div class="footer-main">
-<div class="container">
-         <div style="width: 940px; margin: 0 auto;">
-             
-             
-             
-             
-             
-             
-             
-         </div>
-    
-</div>
-</div>
 <div class="footer-second">
-<div class="container">
-         <div style="width: 940px; margin: 0 auto;">
-            <div class="powered-by"> 
-              Powered by <a href="http://www.invanode.org">InvaNode</a> developed by <a href="http://www.invatechs.com/">invatechs</a> 
-            </div> 
-             
-         </div>
-    
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="powered-by">
+                    Powered by <a href="http://www.invanode.org">InvaNode</a> developed by <a href="http://www.invatechs.com/">invatechs</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
       
     </body>
